fix vertical tabs and remove the size restriction so that it flows with the grid;

--- a/src/_tabs.scss
+++ b/src/_tabs.scss
@@ -69,7 +69,8 @@
                 display: block;
                 position: relative;
                 color: $value;
-                height: 66px;
+                padding: 15px;
+                height: 36px;
                 line-height: 36px;
                 &:first-child{
                     border: none;
