--- a/src/_typeahead.scss
+++ b/src/_typeahead.scss
@@ -1,5 +1,5 @@
 ////////////////////////
-/////TYPEAHEAD//////////
+//      TYPEAHEAD     //
 ////////////////////////
 .tt-dropdown-menu {
   background-color: #fff;
