--- a/src/_tags.scss
+++ b/src/_tags.scss
@@ -181,6 +181,7 @@ textarea{
         top: 0px;
         width: 34px;
         height: 34px;
+        line-height: 34px;
         text-align: center;
         pointer-events:none;
         background-color:transparent;
