--- a/src/_typeahead.scss
+++ b/src/_typeahead.scss
@@ -4,11 +4,9 @@
 .tt-dropdown-menu {
   background-color: #fff;
   border: 1px solid #ccc;
-  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-  -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-  box-shadow: 0 5px 10px rgba(0,0,0,.2);
+  @include box-shadow();
   width: 100%;
-  height: 150px;
+  max-height: 150px;
   overflow-y: scroll;
   z-index: 1001;
   box-sizing: border-box;
@@ -17,10 +15,13 @@
     }
 }
 
-.tt-suggestion.tt-cursor {
-  background-color: #E0E0E0;
-  margin-left:-10px;
-  padding-left:10px;
+.tt-suggestion{
+  padding: 7px;
+  .tt-cursor {
+    background-color: $light-grey;
+    margin-left:-10px;
+    padding-left:10px;
+  }
 }
 
 .twitter-typeahead{
@@ -28,5 +29,5 @@
 }
 
 .tt-input{
-  margin-top: -36px;
+  margin-top: -19px;
 }
