--- a/src/_typeahead.scss
+++ b/src/_typeahead.scss
@@ -4,7 +4,7 @@
 .tt-dropdown-menu {
   background-color: #fff;
   border: 1px solid #ccc;
-  @include box-shadow();
+  //@include box-shadow();
   width: 100%;
   max-height: 150px;
   overflow-y: scroll;
@@ -16,9 +16,10 @@
 }
 
 .tt-suggestion{
-  padding: 7px;
+  padding-top: 7px;
+  padding-bottom: 7px;
   .tt-cursor {
-    background-color: $light-grey;
+    background-color: $medium-grey; //E0E0E0
     margin-left:-10px;
     padding-left:10px;
   }
