--- a/src/_typeahead.scss
+++ b/src/_typeahead.scss
@@ -4,24 +4,18 @@
 .tt-dropdown-menu {
   background-color: #fff;
   border: 1px solid #ccc;
-  //@include box-shadow();
+  @include box-shadow();
   width: 100%;
   max-height: 150px;
   overflow-y: scroll;
   z-index: 1001;
   box-sizing: border-box;
-    .tt-dataset-name{
-        padding-left:10px;
-    }
 }
 
 .tt-suggestion{
-  padding-top: 7px;
-  padding-bottom: 7px;
-  .tt-cursor {
+  padding: 10px;
+  &.tt-cursor {
     background-color: $medium-grey; //E0E0E0
-    margin-left:-10px;
-    padding-left:10px;
   }
 }
 
