--- a/src/_typeahead.scss
+++ b/src/_typeahead.scss
@@ -15,7 +15,7 @@
 .tt-suggestion{
   padding: 10px;
   &.tt-cursor {
-    background-color: $medium-grey; //E0E0E0
+    background-color: $lightest-grey;
   }
 }
 
