--- a/src/_typeahead.scss
+++ b/src/_typeahead.scss
@@ -26,6 +26,6 @@
 span.twitter-typeahead > span.twitter-typeahead {
   position: absolute !important;
   .tt-hint{
-    color: $light-grey;
+    color: $medium-grey;
   }
 }
