--- a/src/_alert_boxes.scss
+++ b/src/_alert_boxes.scss
@@ -26,6 +26,7 @@
     }
     p { padding: 0 34px; }
     &:hover{
+        text-decoration: none;
         color: $white;
         opacity: 1;
         h6{ opacity: 1; }
