--- a/src/_tabs.scss
+++ b/src/_tabs.scss
@@ -123,7 +123,7 @@
     @each $color in $colors {
         $key: nth($color, 1);
         $value: nth($color, 2);
-        .suit-tab-default, .tab-default{
+        .suit-tab-default.#{$key}, .tab-default.#{$key}{
             a.suit-tab-link, a.tab-link{
                 color: $value;
                 &.active{
@@ -131,7 +131,7 @@
                 }
             }
         }
-        .suit-tab-vertical, .tab-vertical {
+        .suit-tab-vertical.#{$key}, .tab-vertical.#{$key} {
             a.suit-tab-link, a.tab-link{
                 color: $value;
                 &.active{
