decouple tab colors

--- a/src/_tabs.scss
+++ b/src/_tabs.scss
@@ -127,6 +127,7 @@
             a.suit-tab-link, a.tab-link{
                 color: $value;
                 &.active{
+                    color: $white;
                     background-color: $value;
                 }
             }
@@ -135,6 +136,7 @@
             a.suit-tab-link, a.tab-link{
                 color: $value;
                 &.active{
+                    color: $white;
                     background-color: $value;
                 }
             }
