update time picker trigger disabled state

--- a/src/_date_picker.scss
+++ b/src/_date_picker.scss
@@ -159,11 +159,13 @@
         }
     }
 
-    &.disabled:hover {
-        .time-picker-trigger{
-            background-color: $lightest-grey;
-            color: $medium-grey;
-            @include border($light-grey);
+    &.disabled {
+        background-color: $lightest-grey;
+        &:hover {
+            .time-picker-trigger{
+                color: $medium-grey;
+                @include border($light-grey);
+            }
         }
     }
 
