update time picker trigger disabled state

--- a/src/_date_picker.scss
+++ b/src/_date_picker.scss
@@ -164,7 +164,7 @@
             background-color: $lightest-grey;
             color: $medium-grey;
             @include border($light-grey);
-            cursor: none;
+            cursor: default;
         }
     }
 
